ubiquity (1.11.10) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Map partman-auto translations to more ubiquity appropriate translations,
    removing the 'Guided -' part of the automatic partitioning options
    (LP: #173954).

  [ Jonathan Riddell ]
  * Merge in port to KApplication from lp:~shtylman/ubiquity/kdeui by Roman Shtylman

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 16 Feb 2009 14:08:14 +0000

ubiquity (1.11.9) jaunty; urgency=low

  [ Colin Watson ]
  * Don't show the "Who are you?" page just because the auto-login or
    encrypt-home questions are asked and not preseeded (LP: #328281).

  [ Evan Dandrea ]
  * Show the time to the left of the selected time zone city if the text
    would otherwise extend past the right edge.
  * Only select cities that are in the same UTC offset as where the mouse
    clicked.

  [ Mario Limonciello ]
  * Remove hdhomerun-config related items from mythbuntu frontend.
  * Make graphics page optional - only present if options other
    than open source driver present.
  * Port all mythbuntu bash scripts to python.
  * debian/control:
    - Drop depends on restricted-manager
    - Add depends for python-xkit
  * Automatic update of included source packages: base-installer
    1.98ubuntu2, grub-installer 1.36ubuntu2, hw-detect 1.71ubuntu4,
    partman-base 128ubuntu7.

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 14 Feb 2009 19:11:00 -0600

ubiquity (1.11.8) jaunty; urgency=low

  * Make the timezone map only use PNGs to avoid a dependency on
    python-gnome2-desktop and because we want to optimze for speed rather
    than image quality.
  * Automatic update of included source packages: partman-auto
    84ubuntu1.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 11 Feb 2009 18:00:42 +0000

ubiquity (1.11.7) jaunty; urgency=low

  [ Mario Limonciello ]
  * bin/ubiquity-dm, debian/init: Fallback to noninteractive if automatic fails
    - If the X server fails to startup (due to issues with vesa, or automatic