@@ -13,7 +13,7 @@ _Description: Use entire disk
 
 Template: ubiquity/text/resize_use_free
 Type: text
-_Description: Resize a partition and use the freed space
+_Description: Resize a partition above and use the freed space
 
 Template: ubiquity/text/live_installer
 Type: text
