@@ -4,6 +4,7 @@ ubiquity (1.11.10) UNRELEASED; urgency=low
   * Map partman-auto translations to more ubiquity appropriate translations,
     removing the 'Guided -' part of the automatic partitioning options
     (LP: #173954).
+  * Move the resize functionality into the segmented bar widget.
 
   [ Jonathan Riddell ]
   * Merge in port to KApplication from lp:~shtylman/ubiquity/kdeui by Roman Shtylman
